Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#16129 closed bug (fixed)

[SoftwareUpdater] notification title is not localized

Reported by: diver Owned by: nielx
Priority: normal Milestone: R1/beta3
Component: Applications/SoftwareUpdater Version: R1/Development
Keywords: localization Cc:
Blocked By: Blocking:
Platform: All

Description

Change History (5)

comment:1 by nielx, 5 years ago

Status: assignedin-progress

Will apply the translation of the Application Name

comment:2 by diver, 5 years ago

Keywords: localization added

comment:4 by waddlesplash, 5 years ago

Resolution: fixed
Status: in-progressclosed

comment:5 by pulkomandy, 5 years ago

Milestone: UnscheduledR1/beta3
Note: See TracTickets for help on using tickets.