SoftwareUpdater: Use translated application name for notification group

Fixes #16129

Change-Id: I9e12d647bc0c8b6e54297e75642a5800613f26ad
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2994
Reviewed-by: waddlesplash <waddlesplash@gmail.com>